test/testdata/classes/instance/blank_field_assignment_error.lox
class Foo {
  init() {
    // error: '_' cannot be used as a field name
    // lint error: '_' cannot be used as a field name
    this._ = 2;
  }
}
Foo();
